--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         </button>
 
         <!-- Logo text or image -->
-        <a class="navbar-brand" href="index.html">Alstar</a>
+        <a class="navbar-brand" href="index.html">Alstar</a> <!--incrustar logo aqui-->
 
       </div>
       <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
@@ -42,7 +42,7 @@
           <li class="current"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Service</a></li>
-          <li><a href="#portfolio">Works</a></li>
+          <!--  <li><a href="#portfolio">Works</a></li>-->
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -62,7 +62,7 @@
             <div class="carousel-background"><img src="img/intro/1.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Alstar web studio</h2>
+                <h2 class="animated fadeInDown">Magento</h2>
                 <p class="animated fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
@@ -74,7 +74,7 @@
             <div class="carousel-background"><img src="img/intro/2.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Creativity and technology</span></h2>
+                <h2 class="animated fadeInDown">Magento</span></h2>
                 <p class="animated fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
@@ -86,7 +86,7 @@
             <div class="carousel-background"><img src="img/intro/3.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Sequi ea ut et est quaerat</span></h2>
+                <h2 class="animated fadeInDown">Magento</span></h2>
                 <p class="animated fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
@@ -239,6 +239,7 @@
 
   <!-- Works -->
   <!--
+  
   <section id="portfolio" class="home-section bg-gray">
     <div class="container">
       <div class="row">
@@ -320,8 +321,8 @@
       </div>
     </div>
   </section>
-  -->
 
+  -->
 
   <!-- Parallax 2 -->
   <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
