--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,8 @@
       <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
           <li class="current"><a href="#intro">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <!-- <li><a href="#about">About</a></li>-->
+         
           <li><a href="#services">Service</a></li>
           <!--  <li><a href="#portfolio">Works</a></li>-->
           <li><a href="#team">Team</a></li>
@@ -109,8 +110,8 @@
     </div>
   </section><!-- #intro -->
 
-  <!-- About -->
-  <section id="about" class="home-section bg-white">
+  <!-- About 
+    <section id="about" class="home-section bg-white">
     <div class="container">
       <div class="row">
         <div class="col-md-offset-2 col-md-8">
@@ -142,30 +143,16 @@
       </div>
     </div>
   </section>
-
-  <!-- Parallax 1 -->
-  <section id="parallax1" class="home-section parallax" data-stellar-background-ratio="0.5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="color-light">
-            <h2 class="wow bounceInDown" data-wow-delay="0.5s">Details are the key for perfection</h2>
-            <p class="lead wow bounceInUp" data-wow-delay="1s">We mix all detailed things together</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  -->
   <!-- Services -->
   <section id="services" class="home-section bg-white">
     <div class="container">
       <div class="row">
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
-            <h2>Services</h2>
+            <h2>Servicios</h2>
             <div class="heading-line"></div>
-            <p>We’ve been building unique digital products, platforms, and experiences for the past 6 years.</p>
+            <p>Aproveche los servicios que le brinda nuestro CMS</p>
           </div>
         </div>
       </div>
@@ -179,9 +166,8 @@
                 <div class="row">
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
                     <div class="wow bounceInLeft">
-                      <h4>Website Design</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna.</p>
+                      <h4>Administre sus imagenes, videos y archivos genericos</h4>
+                      <p>Magento.com le permite administrar sus archivos </p>
                     </div>
                   </div>
                   <div class="col-sm-12 col-md-5">
@@ -236,6 +222,22 @@
       </div>
     </div>
   </section>
+
+  <!-- Parallax 1 -->
+  <section id="parallax1" class="home-section parallax" data-stellar-background-ratio="0.5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="color-light">
+            <h2 class="wow bounceInDown" data-wow-delay="0.5s">Details are the key for perfection</h2>
+            <p class="lead wow bounceInUp" data-wow-delay="1s">We mix all detailed things together</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <!-- Works -->
   <!--
@@ -324,8 +326,8 @@
 
   -->
 
-  <!-- Parallax 2 -->
-  <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
+  <!-- Parallax 2
+    <section id="parallax2" class="home-section parallax" data-stellar-background-ratio="0.5">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -339,6 +341,8 @@
       </div>
     </div>
   </section>
+  -->
+
 
   <!-- Team -->
   <section id="team" class="home-section bg-white">
