--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
         </div>
         <div class="row wow fadeInUp">
           <div class="col-md-6 about-img">
-            <img src="img/about-img.jpg" alt="">
+            <img src="img/CMS.png" alt="">
           </div>
   
           <div class="col-md-6 content">
