Se mejoro el diseño de la landing page y se añadio un dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,13 @@
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
   <link href="css/style.css" rel="stylesheet" media="screen">
   <link href="color/default.css" rel="stylesheet" media="screen">
-<style>
-  /*
-  
- */
+<!--  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">-->
+<link rel="stylesheet" href="css/font-awesome.min.css">
 
-</style>
+
 </head>
 
-<body>
+<body >
 
   <!-- Navigation -->
   <nav class="navbar navbar-default" role="navigation">
@@ -118,9 +116,9 @@
         <div class="row">
           <div class="col-md-offset-2 col-md-8">
             <div class="section-heading">
-              <h2>About us</h2>
+              <h2>Sobre nosotros</h2>
               <div class="heading-line"></div>
-              <p>We’ve been building unique digital products, platforms, and experiences for the past 6 years.</p>
+              <p>Somos</p>
             </div>
           </div>
         </div>
@@ -146,6 +144,46 @@
       </div>
     </section>
 
+    <!-- Services -->
+  <section class="page-section" id="services" style="background: black">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Services</h2>
+          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+              <i class="fa fa-car fa-lg" style="color:rgb(227, 234, 240)"></i>
+              <!-- <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>-->
+           
+          </span>
+          <h4 class="service-heading">E-Commerce</h4>
+          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+        </div>
+        
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Responsive Design</h4>
+          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4 class="service-heading">Web Security</h4>
+          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
