ensayos con handlebars

--- a/vistasAparte/index.html
+++ b/vistasAparte/index.html
@@ -65,7 +65,7 @@
                 <h2 class="animated fadeInDown" style=" margin-bottom: 200px;">CREA SITIOS WEB EN MINUTOS</span></h2>
                
 
-                <a href="./login.html" target="_blank" class="btn-get-started animated fadeInUp">Inicie sesión</a>
+                <a href="./login.html" target="_blank" class="btn-get-started animated fadeInUp">Inicie sesión pulsando aqui</a>
               </div>
             </div>
           </div>
