--- a/public/edicionPagina.html
+++ b/public/edicionPagina.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
 		integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+	 <link rel="stylesheet" href="css/bootstrap.min.css"> 
+	<link REL=StyleSheet HREF="css/style-editor.css" TYPE="text/css" MEDIA=screen>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap4.min.css">
@@ -28,7 +29,7 @@
 	<link rel="stylesheet" href="./froala/css/plugins/video.css">
 	<link rel="stylesheet" href="./froala/css/plugins/fullscreen.css">
 	<link rel="stylesheet" href="./froala/css/plugins/file.css">
-	<link REL=StyleSheet HREF="css/style-editor.css" TYPE="text/css" MEDIA=screen>
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.css">
 	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 	<style type="text/css">
@@ -482,10 +483,7 @@
 	<script src="./js/ripples.min.js"></script>
 	<script src="./js/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script src="./js/main.js"></script>
-	<script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/codemirror.min.js"></script>
-	<script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.3.0/mode/xml/xml.min.js"></script>
+
 	<script type="text/javascript" src="./froala/js/froala_editor.min.js"></script>
 	<script type="text/javascript" src="./froala/js/plugins/align.min.js"></script>
 	<script type="text/javascript" src="./froala/js/plugins/code_beautifier.min.js"></script>
@@ -512,8 +510,9 @@
 	<script type="text/javascript" src="./froala/js/plugins/save.min.js"></script>
 	<script type="text/javascript" src="./froala/js/plugins/fullscreen.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
-	<script src="./js/controlador-editor.js"></script>
 	<script src="./js/push.min.js"></script>
+	<script src="./js/controlador-editor.js"></script>
+
 	<script type="text/javascript">
 		$.material.init();
 		$(document).ready(function () {
