--- a/public/elegirArchivo.html
+++ b/public/elegirArchivo.html
@@ -11,6 +11,7 @@
 		integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet"
 		href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 	<script src="./js/jquery.js"></script>
 	<style type="text/css">
 		.imagenes,
