Se diseño la parte de paginas estaticas HTML

--- a/public/listaPaginaEstatica.html
+++ b/public/listaPaginaEstatica.html
@@ -303,11 +303,11 @@ $('#btn-add').click(function(){
 var _id = $('input[name="id"]').val();
 var _name = $('input[name="name"]').val();
 
-var _tel = $('input[name ="tel"]').val();
+
 
 
 var iconoEliminar = `<a href="#!" class="btn btn-danger btn-raised btn-xs"><i class="zmdi zmdi-delete  zmdi-hc-2x"></i></a>`
-var iconoActualizar = `<a href="#!" class="btn btn-success btn-raised btn-xs"><i class="zmdi zmdi-refresh  zmdi-hc-2x"></i></a>`
+var iconoActualizar = `<a href="paginaEstaticaDashboard.html" class="btn btn-success btn-raised btn-xs"><i class="zmdi zmdi-refresh  zmdi-hc-2x"></i></a>`
 var iconoVer = `<a href="#!" class="btn btn-info btn-raised btn-xs"><i class="zmdi zmdi-eye  zmdi-hc-2x"></i></a>`
 var _tr =`<tr>
 		   <td>${_id}</td>
