--- a/public/ensayoWYSIWYG.html
+++ b/public/ensayoWYSIWYG.html
@@ -11,12 +11,16 @@
 
 </head>
 <body>
-    
-    <textarea cols="80" id="editor1" name="editor1" rows="10" data-sample-short>&lt;p&gt;This is some &lt;strong&gt;sample text&lt;/strong&gt;. You are using &lt;a href=&quot;https://ckeditor.com/&quot;&gt;CKEditor&lt;/a&gt;.&lt;/p&gt;</textarea>
-    <script>
-      CKEDITOR.replace('editor1', {
-        uiColor: '#CCEAEE'
-      });
-    </script>
+  <textarea cols="80" id="editor1" name="editor1" rows="10" data-sample-short>&lt;p&gt;This is some &lt;strong&gt;sample text&lt;/strong&gt;. You are using &lt;a href=&quot;https://ckeditor.com/&quot;&gt;CKEditor&lt;/a&gt;.&lt;/p&gt;</textarea>
+  <script>
+    CKEDITOR.replace('editor1', {
+      width: 600,
+      height: 300,
+      resize_dir: 'both',
+      resize_minWidth: 200,
+      resize_minHeight: 300,
+      resize_maxWidth: 800
+    });
+  </script>
 </body>
 </html>
