Se añadio seccion de comentarios a cada post

--- a/public/listaPaginaEstatica.html
+++ b/public/listaPaginaEstatica.html
@@ -69,7 +69,13 @@
                         <i class="zmdi zmdi-card zmdi-hc-fw"></i> creación de páginas 
                     </a>
      
-                </li>
+				</li>
+				<li>
+                        <a href="administracionPost.html" class="btn-sideBar-SubMenu">
+                            <i class="zmdi zmdi-card zmdi-hc-fw"></i>  Entradas/Posts
+                        </a>
+         
+                    </li>
 
             </ul>
         </div>
