--- a/public/paginaEstaticaDashboard.html
+++ b/public/paginaEstaticaDashboard.html
@@ -74,6 +74,12 @@
                             <i class="zmdi zmdi-card zmdi-hc-fw"></i>  Entradas/Posts
                         </a>
          
+					</li>
+					<li>
+                        <a href="plantillas.html" class="btn-sideBar-SubMenu">
+                            <i class="zmdi zmdi-card zmdi-hc-fw"></i>  Plantillas o temas
+                        </a>
+         
                     </li>
 
 			</ul>
