--- a/public/administracionPost.html
+++ b/public/administracionPost.html
@@ -82,6 +82,13 @@
 							</a>
 			 
 						</li>
+						<li>
+							<a href="plantillas.html" class="btn-sideBar-SubMenu">
+								<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Plantillas o temas
+							</a>
+			 
+						</li>
+	
 				</ul>
 			</div>
 		</section>
