--- a/public/edicionPagina.html
+++ b/public/edicionPagina.html
@@ -100,6 +100,14 @@
 		 
 					</li>
 
+					<li>
+						<a href="plantillas.html" class="btn-sideBar-SubMenu">
+							<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Plantillas o temas
+						</a>
+		 
+					</li>
+
+
             </ul>
         </div>
     </section>
