--- a/public/eleccionPagina.html
+++ b/public/eleccionPagina.html
@@ -79,6 +79,13 @@
 							</a>
 			 
 						</li>
+						
+					<li>
+						<a href="plantillas.html" class="btn-sideBar-SubMenu">
+							<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Plantillas o temas
+						</a>
+		 
+					</li>
 	
 				</ul>
 			</div>
