--- a/public/galeriaVideos.html
+++ b/public/galeriaVideos.html
@@ -113,6 +113,12 @@
                         </a>
          
                     </li>
+                    <li>
+						<a href="plantillas.html" class="btn-sideBar-SubMenu">
+							<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Plantillas o temas
+						</a>
+		 
+					</li>
 
             </ul>
         </div>
