--- a/public/perfilVideo.html
+++ b/public/perfilVideo.html
@@ -106,6 +106,12 @@
                         </a>
          
                     </li>
+                    <li>
+                        <a href="plantillas.html" class="btn-sideBar-SubMenu">
+                            <i class="zmdi zmdi-card zmdi-hc-fw"></i>  Plantillas o temas
+                        </a>
+         
+                    </li>
 
             </ul>
         </div>
