Se logro hacer la subida de imagenes con el motor de plantillas ejs

--- a/public/edicionPagina.html
+++ b/public/edicionPagina.html
@@ -106,7 +106,18 @@
 						</a>
 		 
 					</li>
-
+					<li>
+						<a href="creacionUsuarios.html" class="btn-sideBar-SubMenu">
+							<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Creación de usuarios
+						</a>
+		 
+					</li>
+					<li>
+							<a href="creacionRoles.html" class="btn-sideBar-SubMenu">
+								<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Creación de usuarios
+							</a>
+			 
+						</li>
 
             </ul>
         </div>
