--- a/public/eleccionPagina.html
+++ b/public/eleccionPagina.html
@@ -86,7 +86,18 @@
 						</a>
 		 
 					</li>
-	
+					<li>
+						<a href="creacionUsuarios.html" class="btn-sideBar-SubMenu">
+							<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Creación de usuarios
+						</a>
+		 
+					</li>
+					<li>
+							<a href="creacionRoles.html" class="btn-sideBar-SubMenu">
+								<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Creación de usuarios
+							</a>
+			 
+						</li>
 				</ul>
 			</div>
 		</section>
