--- a/public/paginaEstaticaDashboard.html
+++ b/public/paginaEstaticaDashboard.html
@@ -81,7 +81,18 @@
                         </a>
          
                     </li>
-
+					<li>
+						<a href="creacionUsuarios.html" class="btn-sideBar-SubMenu">
+							<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Creación de usuarios
+						</a>
+		 
+					</li>
+					<li>
+							<a href="creacionRoles.html" class="btn-sideBar-SubMenu">
+								<i class="zmdi zmdi-card zmdi-hc-fw"></i>  Creación de usuarios
+							</a>
+			 
+						</li>
 			</ul>
 		</div>
 	</section>
