--- a/public/listaPaginaEstatica.html
+++ b/public/listaPaginaEstatica.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
 	<title>Student</title>
 	<meta charset="UTF-8">
@@ -14,6 +13,10 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.0/css/select.dataTables.min.css">
 <link rel="stylesheet" href="css/editor.dataTables.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css"> <!--verificar la version-->
+ <!-- FONT AWESOME -->
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
 
 </head>
 
@@ -129,9 +132,9 @@
 				<h2 class="text-titles" style="text-align: center"><b>Creación y administración de páginas</b>
 					<h2>
 			</div> 
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<input type="text" class="form-control pull-right" style="width:20%" id="search" placeholder="Type to search table...">
-			   </div><br>
+			   </div><br> -->
 			<!-- <div class="row" style="display: flex;align-items: center; justify-content: center;">
 				<div class="col-lg-10">                             
 				 <table id="myTable" class="table table-dark display"></table>                
@@ -197,12 +200,12 @@
 				</ul>
 			</div> -->
 
-			<form method= "POST" class="form-inline">
+			<!-- <form method= "POST" class="form-inline">
 				<div>
 					<input type="text" name="id" placeholder="ID" class="form-control" id="id_numero">
 					<input type="text" name="name" placeholder="Name" class="form-control" id="nombre">
 	
-					<!-- <input type="text" name="address" placeholder="Address" class="form-control" id="direccion"> -->
+			
 					<button type="button" class="btn-info" id="btn-add">Añadir nuevo</button>
 				</div>
 			</form>
@@ -221,7 +224,48 @@
 			
 			</tbody>
 			<tfoot></tfoot>
-		</table>
+		</table> -->
+
+
+		<section class="col-md-6">
+			<h1>Escriba un nombre para listar cada página estatica</h1>
+		
+			<div class="row" id="formulario">
+				<div class="col-lg-12 col-12">
+		
+					<input id="nombre-pagina" class="form-control" type="text" placeholder="Nombre el nombre de la página aquí">
+					<div class="valid-feedback">Ok</div>
+					<div class="invalid-feedback">Escriba el nombre, para poder empezar la página</div>
+				</div>
+		
+			
+			
+			
+			
+				<div class="col-12" >
+				
+					<button onclick="registrarPagina()" type="button"  id="boton-sign-in" class="btn btn-success" style="color:white">Guardar página</button>
+					<button style="display:none" onclick="actualizarUsuario()" type="button"  id="boton-update" class="btn btn-primary">Update</button>
+					<button style="display:none" onclick="limpiar()" type="button"  id="boton-clear" class="btn btn-danger">Clear</button>
+					<div id="resultado" class="alert alert-success" role="alert" style="display:none;">
+						Registro guardado
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="col-md-6">
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th>Nombre de la página</th>
+			
+					
+						<th colspan="2">Actions</th>
+					</tr>
+				</thead>
+				<tbody id="tabla-registros"></tbody>
+			</table>
+		</section>
 		 </div>
 		
 	
@@ -317,9 +361,10 @@
 	<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 	<script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
 	<script src="https://cdn.datatables.net/select/1.3.0/js/dataTables.select.min.js"></script>
+	<script src="js/controlador-pagina-estatica.js"></script>
 	
 
-<script>
+<!-- <script>
 $(function(){
 $('#btn-add').click(function(){
 // declaracion de variables
@@ -353,7 +398,7 @@ function limpiar(){
     document.getElementById('telefono').value = '';
     document.getElementById('direccion').value = '';
  }
-</script>
+</script> -->
 <!-- 
 	<td><a href="#!" class="btn btn-success btn-raised btn-xs"><i class="zmdi zmdi-refresh"></i></a></td>
 	<td><a href="#!" class="btn btn-danger btn-raised btn-xs"><i class="zmdi zmdi-delete"></i></a></td>
