--- a/public/eleccionPagina.html
+++ b/public/eleccionPagina.html
@@ -186,7 +186,7 @@
 						  previamente definido en orden cronológico
 					  </p>
 					  <!-- Button -->
-					  <a href="listaPost.html" class="btn btn-primary btn-block" style="color:white">Button</a>
+					  <a href="listaPaginaPost.html" class="btn btn-primary btn-block" style="color:white">Button</a>
 				  
 					</div>
 				  
