--- a/public/registro.html
+++ b/public/registro.html
@@ -143,7 +143,7 @@ background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+
     <div class="form-row">
         <div class="form-group col-md-6">
             <label for="clave">Contraseña</label>
-            <input type="password" id="clave" class="form-control " placeholder="Contraseña" aria-describedby="passwordHelpInline">
+            <input type="password" id="Clave" class="form-control " placeholder="Contraseña" aria-describedby="passwordHelpInline">
             <!-- <small id="passwordHelpInline"  style="color: white">
                 Debe tener entre 8 y 20 caracteres.
             </small> -->
@@ -166,6 +166,7 @@ background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+
 
  
         Cumpleaños
+
        <div class="col-lg-2 col-12">
             <select id="day" class="form-control"><option value="">Día</option></select>
             <div class="valid-feedback">Ok</div>
@@ -189,7 +190,8 @@ background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+
 </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
  <script src="js/controlador-registro-usuarios.js"></script>
